deployment/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
spec:
  containers:
  - name: test
    image: docker.registry.com:5000/ubuntu:v1
    command: ["/bin/sh"]
    args: ["-c", "while true; do echo Done Deploying test-pod; sleep 3600;done"]
    imagePullPolicy: Always
  imagePullSecrets:
  - name: regsecret
