deployment/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-cluster-ip
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
